--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,24 @@ header {
 	font-size:12px;
 	font-family: Georgia, Tahoma, 'serif';
 	color: #000;
+	font-weight: normal;
+}
+.head-right {
+	text-align: center;
+}
+.head-right a {
+	font-size:0.9em;
+	text-decoration: none;
+	color:black;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+.head-right a:hover {
+	text-decoration: underline;
+}
+.head-right a:nth-child(3) {
+	border-left: 1px solid black;
+	border-right: 1px solid black;
 }
 .head-right form {
 	padding:0;
@@ -37,7 +55,9 @@ header {
 	height: 40px;
 	background-color: #000;
 	border-radius: 0 0 10px 10px;
-	padding-bottom: 9px;
+	padding-bottom: 8px;
+	margin-bottom:5px;
+
 }
 .head-right form input {
 	border-radius: 7px;
@@ -51,7 +71,8 @@ header {
 	padding-left: 10px;
 }
 .head-right form input:focus {
-	color: #ffa;
+	color: rgba(1,1,1,1);
+	font-weight: bold;
 	box-shadow: 0px 0px 1px rgba(255,255,255,1),
 				0px 0px 1px #2f7cc0;
 	outline:transparent;
@@ -73,6 +94,7 @@ header {
 .head-right form a :hover {
 	text-decoration: underline;
 }
+
 .nav-menu {
 	height: 54px;
 }
@@ -112,7 +134,7 @@ header {
 	top:-25px;
 	color:grey;
 }
- .nav-menu li:hover a {
+.nav-menu li:hover a {
 	color: #f6bd4c;
 }
 .nav-menu li:hover span {	
@@ -122,20 +144,15 @@ header {
 	display: flex;
 	flex-direction: row;
 	align-items: middle;
-	height:40px;
-	
 	border:2px solid black;
 	background-color: white;
 }
 
-.sub-menu a:nth-child(1) {
-	margin-left: 10px;
-}
 .sub-menu a {
-	margin: auto 0px;
-	margin-right: 5px;
-	display: block;
-	padding: 2px 15px;
+	padding: 3px 7px;
+	margin: 2px 10px;
+	
+
 	color: black;
 	text-decoration: none;
 	font-size: 18px;
@@ -423,13 +440,15 @@ margin-bottom: 20px;
 	width:32px;
 	height: 32px;
 	margin-right: 5px;
-	border-radius: 50%;
+	border-radius: 75%;
 	background-color: white;
 	margin-left: 10px;
 	border:2px solid transparent;
+
 }
 .main-footer .third-colum .circle:hover {
 	border:2px solid darkorange;
+	
 
 }
 .copyright {
