--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 	padding-left:20px;
 	padding-right:20px;
 	margin:0 auto;
-	width: 1000px;
+	width: 90%;
 	min-height: 1360px;
 	/* фон черты для страницы сайта*/
 	background-color: #fff;
@@ -362,7 +362,6 @@ header {
 	flex-wrap: wrap;
 	justify-content: space-between;
 	border-top: 5px solid #ce4521;
-	height: 290px;
 	background-color: #231f20;
 }
 .main-footer>section  h1 {
@@ -391,27 +390,27 @@ header {
 }
 
 .main-footer .first-colum, .second-colum {
-	margin-left: 20px;
-	width:220px;
-	margin-top: 10px;
+	margin-left: 2%;
+	width:22%;
+	margin-top: 1%;
 }
 .main-footer .second-colum li:nth-child(4) {
-margin-bottom: 20px;
+	margin-bottom: 2%;
 }
 
 .main-footer .third-colum {
 	display: flex;	
-	width: 350px;
-	margin-right:20px;
+	width: 35%;
+	margin-right:2%;
 	flex-wrap: wrap;
 	flex-direction: row;
 	border-left: 1px solid #979797;
-	margin-top: 10px;
-	padding-left: 10px;
-	margin-left: 20px;
+	margin-top: 0.1%;
+	padding-left: 0.1%;
+	margin-left: 0.2%;
 }
 .main-footer .third-colum input {
-	padding: 8px 0 10px 10px;
+	padding: 0.08% 0 0.1% 0.1%;
 	font-size:13px;
 	font-family: Georgia, Tahoma, 'serif';
 	border-right: 5px;
@@ -429,7 +428,7 @@ margin-bottom: 20px;
 	background-color:#fff;
 	border-radius: 5px;
 	color: #06213f;
-	margin-left: 15px;
+	margin-left: 1,5%;
 }
 .main-footer .third-colum a:hover {
 	text-decoration: none;
