thrid colum fixed

--- a/css/style.css
+++ b/css/style.css
@@ -371,9 +371,7 @@ header {
 	color: #fff;
 	width:100%;
 }
-.main-footer {
-	border:2px solid green;
-}
+
 .main-footer section ul, .main-footer section li {
 	padding:0;
 	margin:0;
@@ -395,7 +393,6 @@ header {
 	margin-left: 2%;
 	width:22%;
 	margin-top: 1%;
-	border:2px solid green;
 }
 .main-footer .second-colum li:nth-child(4) {
 	margin-bottom: 2%;
@@ -403,10 +400,8 @@ header {
 
 .main-footer .third-colum {
 	display: flex;	
-	width: 37%;
-	border:2px solid darkorange;
+	width: 40%;
 	flex-wrap: nowrap;
-
 	flex-direction: column;
 	border-left: 1px solid #979797;
 	padding-left: 1%;
@@ -414,52 +409,48 @@ header {
 	margin-right:2%;
 	margin-left: 2%;
 }
+
+.main-footer .third-colum a:hover {
+	text-decoration: none;
+	color: #929292;
+}
+
+.main-footer .third-colum .circle svg {
+	width:32px;
+	border:3px solid white;
+	border-radius: 50%;
+	background-color:white;
+}
+.main-footer .third-colum .circle svg:hover {
+	border:3px solid darkorange;
+}
+
 .main-footer .third-colum input {
-	padding: 2.75862068965517% 0 3.44827586206897% 3.44827586206897%;
+	padding: 2.44827586206897% 2.44827586206897%;
 	font-size: 81.25%;
 	font-family: Georgia, Tahoma, 'serif';
-	border-right: 5px;
 	color: #989898;
 	border-radius: 7px;
-	width:100%;
+	color:black;
+	font-size:91.25%;
+	margin-right: 5%;
+	width: 40%;
 }
 .main-footer .third-colum input:focus{
 	box-shadow: 0px 0px 1px rgba(255,255,255,1),
 				0px 0px 1px #2f7cc0;
 	outline:transparent;
 }
-.main-footer .third-colum  a {
-	display: block;
-	padding:3.44827586206897% 5.71428571428571%;
+.main-footer .third-colum a {
 	background-color:#fff;
-	border-radius: 5px;
+	border-radius: 7px;
+	padding: 2.44827586206897% 2.44827586206897%;
 	color: #06213f;
-	margin-left: 4.28571428571429%;
 	font-weight: bold;
-	
-	width:100%;
-	text-align: center;
+	align-content: stretch;
+	margin-right: 25%;
 }
-.main-footer .third-colum a:hover {
-	text-decoration: none;
-	color: #929292;
 
-}
-.main-footer .third-colum .circle {
-	align-items: flex-start;
-	width:32px;
-	height: 32px;
-	margin-right: 5px;
-	border-radius: 75%;
-	background-color: white;
-	margin-left: 10px;
-	border:2px solid transparent;
-
-}
-.main-footer .third-colum .circle:hover {
-	border:2px solid darkorange;
-	
-}
 .copyright {
 	display: flex;
 	flex-direction:row;
@@ -471,7 +462,7 @@ header {
 	padding: 0.1% 0;
 	outline-offset: 2px solid darkblue;
 	outline-offset: -5px;
-	margin-top: 2%;
+	margin-top: 1%;
 	width:100%;
 
 }
