--- a/css/style.css
+++ b/css/style.css
@@ -13,53 +13,56 @@ body {
 .page-header {
 	display:flex;
 	flex-wrap: nowrap;
+	flex-direction: column;
 	justify-content: space-between;
 	background-color: #fcd05d;
 	margin-left:0px;
 	margin-right:0px;
 	color: #333;
-	padding:0 20px;
 }
-
-.head-left h1 {
+.page-header__top {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	text-align: center;
+	margin: 0 10px;
+}
+.page-header__top h1, .page-header__top h2 {
 	font-size:24px;
 	font-family: Georgia, Tahoma, 'serif';
 	color: #000;
+	text-align: left;
 }
-.head-left h2 {
+.page-header__top h2 {
 	font-size:12px;
-	font-family: Georgia, Tahoma, 'serif';
-	color: #000;
 	font-weight: normal;
 }
-.head-right {
-	text-align: center;
-}
-.head-right a {
+
+.page-header__top a {
 	font-size:0.9em;
 	text-decoration: none;
 	color:black;
 	padding-left: 5px;
 	padding-right: 5px;
+
 }
-.head-right a:hover {
+.page-header__top a:hover {
 	text-decoration: underline;
 }
-.head-right a:nth-child(3) {
+.page-header__top a:nth-child(3) {
 	border-left: 1px solid black;
 	border-right: 1px solid black;
 }
-.head-right form {
+.page-header__top form {
 	padding:0;
-	margin-right:10px;
 	height: 40px;
 	background-color: #000;
 	border-radius: 0 0 10px 10px;
-	padding-bottom: 8px;
+	padding-bottom: 10px;
 	margin-bottom:5px;
 
 }
-.head-right form input {
+.page-header__top form input {
 	border-radius: 7px;
 	background-color: #f6bd4c;
 	border: none;
@@ -70,7 +73,7 @@ body {
 	color: #ffa;
 	padding-left: 10px;
 }
-.head-right form input:focus {
+.page-header__top form input:focus {
 	color: rgba(1,1,1,1);
 	font-weight: bold;
 	box-shadow: 0px 0px 1px rgba(255,255,255,1),
@@ -78,7 +81,7 @@ body {
 	outline:transparent;
 	/*outline:none; ? what more better?*/
 }
-.head-right form a {
+.page-header__top form a {
 	font-size: 12px;
 	font-family: Georgia, Tahoma, 'serif';
 	background-color: #525252;
@@ -91,68 +94,65 @@ body {
 	margin-left: 10px;
 	margin-right: 15px;
 }
-.head-right form a :hover {
+.page-header__top form a :hover {
 	text-decoration: underline;
 }
-
 .nav-menu {
-	height: 54px;
+	overflow: hidden;
 }
 .nav-menu ul {
 	display:flex;
 	flex-direction: columns-reverse;
-	background-color: black;
-	color: white;
+	background-color: #000;
+	color: #fff;
 	padding-left:10px;
 	padding-right:10px;
 	margin:0;
+	flex-wrap: wrap;
 }
 .nav-menu li {
-	list-style-type: none;
-	margin:0 auto;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	border-right:1px solid #666;
+	border-left:1px solid #666;
+	justify-content: space-around;
 	text-align: center;
-
+	padding:0px 10px;
+	margin:10px auto;
 }
 .nav-menu a {
-    flex-grow: 1;
-	display:block;
-	border-right:1px solid #666;
-	padding:0px 10px;
-	margin: 20px 0px;
 	font-size: 18px;
 	color: #FFF;
 	text-decoration: none;
+	transition: linear 300ms;
 }
-.nav-menu li:nth-child(1) a {
-	border-left:1px solid #666;
-}
+
 .nav-menu span {
-	position: relative;
 	font-size: 0.8em;
-	display: none;
 	margin:0px;
-	top:-25px;
 	color:grey;
+	transition: linear 300ms;
 }
 .nav-menu li:hover a {
 	color: #f6bd4c;
+	transition: linear 300ms;
 }
 .nav-menu li:hover span {	
-	display: block;
+	color: #f6bd4c;
+	transition: linear 300ms;
 }
 .sub-menu {
 	display: flex;
 	flex-direction: row;
-	align-items: middle;
 	border:2px solid black;
 	background-color: white;
+	flex-wrap: wrap;
 }
 
 .sub-menu a {
-	padding: 3px 7px;
-	margin: 2px 10px;
-	
-
+	padding: 5px 10px;
+	margin: 3px 10px;
 	color: black;
 	text-decoration: none;
 	font-size: 18px;
@@ -171,8 +171,6 @@ body {
 	box-shadow: 0px 0px 1px rgba(255,255,255,1),
 				0px 0px 1px #2f7cc0;
 }
-
-
 .featured {
 	margin-top: 0px;
 	display:flex;
